test(LottoTest): 보너스 번호가 일치하는지 확인하는 기능 검증 테스트 추가